# ai-overlay

./: $null  .gitignore  README.md  bts.jsonc  electron-builder.yaml  electron.d.ts  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.paths.json  turbo.json  vite.config.ts
apps/desktop/: .gitignore  package.json
apps/desktop/electron/: main.js  preload.js
apps/oauth-proxy/: .gitignore  README.md  index.ts  package.json
apps/server/: DEPLOYMENT.md  index.html  package.json  tsconfig.json  tsdown.config.ts  vercel.json
apps/server/src/: bun.d.ts  index.ts
apps/site/: index.html  package.json  tsconfig.json  vite.config.ts
apps/site/src/: main.tsx
apps/site/src/routes/: About.tsx  Account.tsx  App.tsx  AuthCallback.tsx  Home.tsx  Login.tsx
apps/tauri-updater-server/: package.json  tsconfig.json
apps/tauri-updater-server/api/: update.ts
apps/updater/: package.json  vercel.json
apps/updater/api/: update.ts
apps/web/: index.html  next.config.ts  package.json  tsconfig.json  vite.config.ts
apps/web/icons/: CustomLogo.tsx
apps/web/src/: index.css  main.tsx  middleware.ts  routeTree.gen.ts  vite-env.d.ts
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: cross-platform.json  default.json  main.json
apps/web/src-tauri/src/: capture.rs  lib.rs  main.rs  window.rs
apps/web/src-tauri/src/speaker/: commands.rs  windows.rs
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: AttachmentSheet.tsx  AuthUI.tsx  ChatWindow.tsx  LoginButton.tsx  ProfileDropdown.tsx  RichTextEditor.tsx  TitleBar.tsx  TopicsDisplay.tsx  TypeEffect.tsx  Usermenu.tsx  auth-button.tsx  auth-callback.tsx  header.tsx  oauth-login.tsx  protected-route.tsx  providers.tsx  sign-in-form.tsx  sign-up-form.tsx  user-menu.tsx
apps/web/src/config/: shortcut.ts
apps/web/src/contexts/: AuthContext.tsx  ChatContext.tsx  README.md
apps/web/src/hooks/: auth2.tsx  use-code-highlighter.tsx  useActivities.ts  useApp.ts  useAttachments.ts  useChatConversation.ts  useConversationSummary.ts  useConversations.ts  useDeepLinkAuth.ts  useInteractive.ts  useOAuth.ts  useUpdater.ts  (+4 more)
apps/website/: package.json  vite.config.ts
apps/website/src/: index.css  main.tsx  routeTree.gen.ts
dist-electron/: main.js  preload.mjs
electron/: main.ts  preload.ts
main/: main.js  preload.js
src/: App.css  App.tsx  index.css  main.tsx
src/app/: globals.css  layout.tsx  page.tsx
src/app/app-window/: layout.tsx  page.tsx
src/components/: theme-toggle.tsx
src/components/ai-elements/: code-block.tsx
src/components/app-window/: appWindow.tsx  custom-titlebar.tsx
src/components/chat/: Chat.tsx  ai-message.tsx  user-message.tsx
src/components/menu/: app.tsx  ask-question-button.tsx  grid-button.tsx  listen-button.tsx  menu.tsx  theme-toggle.tsx  visibilty-button.tsx
src/components/overlay/: floatingmenu.tsx
src/components/ui/: button.tsx  listening-buttons.tsx  puilseCicle.tsx  tooltip.tsx
src/hooks/: useListening.ts
src/pages/: menu.tsx
(+95 files in other folders)
