[package]
name = "Bangg"
version = "0.1.5"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.1", features = ["devtools"] }
tauri-plugin-log = "2"
screenshots = "0.8"
base64 = "0.21"
tauri-plugin-shell = "2.0"
image = "0.25"
tauri-plugin-polygon = "0.1.2"
tokio = { version = "1", features = ["full"] }
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-updater = "2.9.0"
tauri-plugin-http = "2.5.2"
xcap = "0.7.1"
tauri-plugin-machine-uid = "0.1.2"
tauri-plugin-keychain = "2.0.2"
tauri-plugin-opener = "2.5.0"
hound = "3.5.1"
tracing = "0.1.41"
futures-util = "0.3.31"
dotenv = "0.15.0"
ringbuf = "0.4.8"
cpal = "0.16.0"
once_cell = "1.21.3"
reqwest = "0.12.24"
anyhow = "1.0.100"
tauri-plugin-posthog = "0.2.4"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-os = "2.3.2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
